--- a/styles.css
+++ b/styles.css
@@ -65,3 +65,29 @@ h1{
     width: 400px;
     height: auto;
 }
+
+.second-section{
+    text-align: center;
+    margin-bottom: 50px;
+}
+
+.second-section-title{
+    display: flex;
+    justify-content: center;
+    font-size: 36px;
+    color: #1F2937;
+    font-weight: 900;
+}
+
+.second-section-img img{
+    width: 250px;
+    height: auto;
+}
+
+.second-section-information{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+    flex-wrap: wrap;
+}
